--- a/app/views/miq_ae_class/_fields_seq_form.html.haml
+++ b/app/views/miq_ae_class/_fields_seq_form.html.haml
@@ -1,4 +1,4 @@
-= render :partial => "layouts/flash_msg", :locals => {:div_num => "_fields_seq"}
+= render :partial => "layouts/flash_msg"
 #column_lists
   %p
   %table#formtest.form{:width => '50%'}
